feat: add create stack to search engine: BACKEND-25 (#9)
